# internal/transport/http/docs/openapi.json
@@ -155,7 +155,7 @@
     "schemas": {
       "CreateTaskRequest": {
         "type": "object",
-        "required": ["title"],
+        "required": ["title", "deadline"],
         "properties": {
           "title": {
             "type": "string",
@@ -169,6 +169,11 @@
             "type": "string",
             "enum": ["new", "in_progress", "done"],
             "example": "new"
+          },
+          "deadline": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2026-03-24T00:00:00Z"
           }
         }
       },
@@ -188,6 +193,11 @@
             "type": "string",
             "enum": ["new", "in_progress", "done"],
             "example": "in_progress"
+          },
+          "deadline": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2026-03-24T00:00:00Z"
           }
         }
       },
@@ -204,6 +214,11 @@
             "type": "string",
             "enum": ["new", "in_progress", "done"],
             "example": "new"
+          },
+          "deadline": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2026-03-24T00:00:00Z"
           },
           "created_at": {
             "type": "string",
